Added some files and folder to vsCode readonly config

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,10 @@
     "files.exclude": {
         "**/.vitepress/dist": true,
         "**/.vitepress/cache": true
+    },
+    "files.readonlyInclude": {
+        "**/.vitepress/dist": true,
+        "**/.vitepress/cache": true,
+        "pnpm-lock.yaml": true
     }
 }
