--- a/package.json
+++ b/package.json
@@ -2,9 +2,11 @@
     "scripts": {
         "dev": "vitepress dev docs",
         "build": "vitepress build docs",
-        "preview": "vitepress preview docs"
+        "preview": "vitepress preview docs",
+        "fmt": "prettier . -w"
     },
     "devDependencies": {
+        "prettier": "3.1.0",
         "vitepress": "1.0.0-rc.31"
     }
 }
