Hide pnpm-lock.yaml from vsCode explorer

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,8 @@
 {
     "files.exclude": {
         "**/.vitepress/dist": true,
-        "**/.vitepress/cache": true
+        "**/.vitepress/cache": true,
+        "pnpm-lock.yaml": true
     },
     "files.readonlyInclude": {
         "**/.vitepress/dist": true,
