--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     },
     "devDependencies": {
         "prettier": "3.1.0",
-        "vitepress": "1.0.0-rc.31"
+        "vitepress": "1.0.0-rc.31",
+        "vue": "3.3.11"
     },
     "type": "module"
 }
