--- a/package.json
+++ b/package.json
@@ -6,9 +6,15 @@
         "format": "prettier . -w"
     },
     "devDependencies": {
+        "@codemirror/lang-javascript": "6.2.1",
+        "@codemirror/theme-one-dark": "6.1.2",
+        "@webcontainer/api": "1.1.8",
         "prettier": "3.1.0",
         "vitepress": "1.0.0-rc.31",
-        "vue": "3.3.11"
+        "vue": "3.3.11",
+        "vue-codemirror": "6.1.1",
+        "xterm": "5.3.0",
+        "zod": "3.22.4"
     },
     "imports": {
         "#docs/*": "./docs/*"
